<resources>
    <string name="app_name">Sport 24/7</string>
    <string name="title_rules">Rules</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_player">Player</string>
    <string name="splash_screen_logo_description">splash_screen_logo</string>
    <string name="menu_fragment_title_text">What is your game?</string>
    <string name="menu_fragment_tennis_button_text">Тенис</string>
    <string name="menu_fragment_football_button_text">Футбол</string>
    <string name="menu_fragment_basketball_button_text">Баскетбол</string>
    <string name="menu_fragment_handball_button_text">Гандбол</string>
    <string name="player_item_avatar_of_player">avatar of player</string>
    <string name="player_item_kind_of_sport_text">Вид спорта:</string>
    <string name="player_item_player_name_text">Имя игрока:</string>
    <string name="player_item_def_text_kind_of_sport">футбол</string>
    <string name="player_item_def_name_text">Мбаппе</string>
    <string name="rules_football">Игровое поле. Футбольные правила требуют наличия для проведения игры прямоугольного поля 90-120 метров длиной и 45-90 метров шириной с травяным либо же искусственным покрытием. На поле должна присутствовать специальная разметка: средняя линия с отмеченным при помощи окружности центром поля, боковые линии, линии ворот и пр. Обязательно размечается площадь ворот, в пределах которой запрещается толкать вратаря, а также штрафная площадь, в которой вратарю разрешается играть руками. За нарушение полевым игроком правил в зоне своей штрафной площадки назначается пенальти. Правила футбола также требуют присутствия специальных флажков в углах поля. По центру линий ворот располагаются непосредственно сами ворота, состоящие из вертикальных сток, горизонтальной перекладины, а также сетки.
    Футбольный мяч. Футбольные правила оговаривают использование в игре мяча сферической формы с длиной окружности не выше 70 см и не меньше 68 см. При повреждении мяча матч останавливают, после чего осуществляется замена мяча.
    Число участников игры. Правила футбола разрешают присутствие на поле единовременно не больше одиннадцати игроков от команды (десять полевых плюс вратарь), но не менее семи. Команд в игре – две. Разрешается проведение нескольких замен, в том числе – замены вратаря.
    Футбольная форма. Современные правила игры в футбол непременно требуют наличия у игроков полевых команды единой формы. Форма вратарей должна быть отличной от формы полевых игроков, а также судей. Форма судей обычно обладает черной либо желтой цветовой гаммой. В форме имеется карман для блокнота и штрафных карточек.
    Футбольный судья. Следит за тщательным соблюдением правил и обладает необходимыми полномочиями. Принятое во время игры решение может изменить только сам судья до возобновления игры. Жалобы на судейство рассматривают специальные комитеты. Главному судье помогают судьи на линиях, отдающие сигналы специальными флажками.
    Продолжительность игры. Правила футбола предусматривают наличие двух таймов, каждый по 45мин., а также пятнадцатиминутного перерыва. Главным судьей может быть добавлен определенный временной промежуток к основному времени игры, в качестве компенсации времени, затраченного на замены, а также на вмешательство врачей и прочие задержки времени. Также дополнительное время может назначаться на разрешение ничьих.
    Начало игры, а также ее возобновление. Футбольные правила гласят, что перед игрой проводится жеребьевка для распределения ворот. После перерыва команды меняются на поле воротами.
    Мяч в игре. Из игры мяч выходит после покидания пределов поля, а также после остановки игры судьей. Вводят мяч в игру следующими способами: ударом от ворот, начальным ударом, вбрасыванием, угловым, а также штрафным либо свободным ударом или после его розыгрыша.
    </string>
    <string name="rules_basketball">ПЕРВЫЕ ПРАВИЛА БАСКЕТБОЛА:
        Мяч может быть брошен в любом направлении одной или двумя руками.
    По мячу можно бить одной или двумя руками в любом направлении, но ни в коем случае кулаком.
    Игрок не может бегать с мячом. Игрок должен отдать пас или бросить мяч в корзину с той точки, в которой он его поймал, исключение делается для игрока бегущего на хорошей скорости.
    Мяч должен удерживаться одной или двумя руками. Нельзя использовать для удержания мяча предплечья и тело.
    В любом случае не допускаются удары, захваты, удержание и толкание противника. Первое нарушение этого правила любым игроком, должно фиксироваться как фол (грязная игра); второй фол дисквалифицирует его, пока не будет забит следующий мяч и если имелось очевидное намерение травмировать игрока, на всю игру. Никакая замена не позволяется.
    Удар по мячу кулаком - нарушение пунктов правил 2 и 4, наказание описано в пункте 5.
    Если одна из сторон совершает три фола подряд, они должны фиксироваться как гол, для противников (это значит, что за это время противники не должны совершить ни одного фола).
    Гол засчитывается, - если брошенный или отскочивший от пола мяч попадает в корзину и остается там. Защищающимся игрокам не позволяется касаться мяча или корзины в момент броска. Если мяч касается края, и противники перемещают корзину, то засчитываться гол.
    Если мяч уходит в аут (за пределы площадки), то он должен быть выброшен в поле и первым коснувшимся его игроком. В случае спора выбросить мяч в поле, должен судья. Вбрасывающему игроку позволяется удерживать мяч пять секунд. Если он удерживает его дольше, то мяч отдается противнику. Если любая из сторон пытается затягивать время, судья должен дать им фол.
    Судья должен следить за действиями игроков и за фолами, а также уведомлять рефери, о трех, совершенных подряд фолах. Он наделяется властью дисквалифицировать игроков согласно Правилу 5.
    Рефери должен следить за мячом и определять, когда мяч находится в игре (в пределах площадки) и когда уходит в аут (за пределы площадки), какая из сторон должна владеть мячом, а также контролировать время. Он должен определять поражение цели, вести запись забитых мячей, а также выполнять любые другие действия, которые обычно выполняются рефери.
    Игра состоит из двух половин по 15 минут каждая с перерывом в пять минут между ними.
    Сторона, забросившая больше мячей в этот период времени является победителем.</string>
    <string name="rules_tennis">Перед началом матча проводится жеребьевка. На ней определяется игрок, который будет первым подавать в матче. Также выбирается сторона корта. Этот момент важен при солнечной погоде: против солнца очень тяжело подавать, т.к. оно слепит глаза и мешает сосредоточиться и качественно исполнить подачу.
    Гейм на своей подаче начинается с первого (правого) квадрата корта. Подача осуществляется по диагонали на половину корта соперника. Розыгрыш продолжается до тех пор, пока кто-то не ошибется (не попадает по мячу или не попадет на половину корта соперника).
    В сете выигрывает тот, кто первым наберет 6 геймов с разницей в 2 гейма. Если необходимой разницы нет, теннисисты играют до счета 6:6, после чего играют тай-брейк до 7-и очков, его также можно выиграть только с разницей не менее 2-х очков.
    Победа в матче достается тому, кто первым выиграет 2 партии (чаще всего новички играют трехсетовые матчи до двух побед в сетах).
    По ходу матча игроки подают и принимают по очереди. Важно не сбиваться и следить за тем, кто должен подавать в следующем гейме. Также после каждого сыгранного нечетного гейма происходит переход: игроки меняются половинами корта (например, при счете 1:0, 2:1, 3:2 и т.д.).</string>
    <string name="rules_handball">Гандбольная команда состоит из 16 человек, из которых одновременно на площадке могут находиться не более 7 игроков, остальные являются запасными. Один из находящихся на площадке игроков является вратарём. В начале игры в каждой из команд должно быть не менее 5 игроков.
    Время игры в гандболе. Матчи взрослых команд состоят из двух таймов по 30 минут с 15-минутным перерывом. Матчи детских команд 8-12 лет состоят из двух таймов по 20 минут, а команд 12-16 лет — из двух таймов по 25 минут. После перерыва команды меняются сторонами площадки. В случае необходимости выявления победителя может быть назначено дополнительное время (овертайм) — два тайма по 5 минут с 1-минутным перерывом.
    Матч начинается с введения мяча в центр поля. Игроки могут смело касаться мяча любой частью тела, кроме ног. Прежде чем осуществить передачу необходимо убедиться, что игрок находится на расстоянии более 3 метров.
    Прежде чем сделать пас или бросить мяч в ворота противника, каждый игрок вправе держать его у себя только в течение трех секунд. В то же время с мячом в руках можно сделать не более 3 шагов, затем придется перебросить его кому-нибудь другому.</string>
    <string name="gallery_item_gallery_photo">gallery photo</string>
</resources>