<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp">

        <ImageView
            android:id="@+id/player_item_avatar_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/player_item_avatar_of_player"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/football_player_avatar" />

        <TextView
            android:id="@+id/player_item_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_item_def_name_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/player_item_label_name_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/player_item_label_name_textView"
            app:layout_constraintTop_toTopOf="@+id/player_item_label_name_textView" />

        <TextView
            android:id="@+id/player_item_kind_of_sport_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_item_def_text_kind_of_sport"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/player_item_label_kind_of_sport_textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/player_item_label_kind_of_sport_textView"
            app:layout_constraintTop_toTopOf="@+id/player_item_label_kind_of_sport_textView" />

        <TextView
            android:id="@+id/player_item_label_name_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_item_player_name_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/player_item_avatar_imageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999" />

        <TextView
            android:id="@+id/player_item_label_kind_of_sport_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/player_item_kind_of_sport_text"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/player_item_avatar_imageView"
            app:layout_constraintTop_toBottomOf="@+id/player_item_label_name_textView" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>